--- a/lwc.css
+++ b/lwc.css
@@ -158,3 +158,14 @@ div.wc > div.wc-r > div.wc-time {
 .wc.over {
     border: 2px dashed #ccc;
 }
+
+@media (max-width: 600px) {
+    #settings-panel form {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    #settings-panel input, #settings-panel button {
+        width: auto;
+    }
+}
